# python-aws

./: .editorconfig.yml  .gitignore  README.md  WARP.md  app.py  main.py  pre-commit  pre-push  pulumi-aws-python.sh  pyproject.toml  python-aws-pulumi.sh
apps/: ebs-cdk.py  ec2-cdk.py  elb-cdk.py  group-cdk.py  iam-key-rotate-cdk.py  lambda-hello.py  rds-aurora-cdk.py  rds-sql-cdk.py  role-iam.py  s3-cdk.py  secmgr-cdk.py  sg-cdk.py  vpc-cdk.py
aws_proj/: aws_proj_stack.py
tests/unit/: test_aws_proj_stack.py
